# Hackathon-I_GIAIC

./: docusaurus.config.js
backend/: .env.example  .gitignore  README.md  agent.py  api.py  conversations.db  conversations.db-shm  conversations.db-wal  main.py  pyproject.toml  retrieve_main.py  test_runner.py
backend/history/prompts/001-doc-rag-ingestion/: 001-doc-rag-ingestion-spec.spec.prompt.md  002-implementation-plan-doc-rag.plan.prompt.md  003-task-generation-doc-rag.tasks.prompt.md  004-pipeline-implementation.green.prompt.md
backend/history/prompts/002-rag-retrieval-validation/: 002-retrieval-validation-plan.plan.prompt.md  003-retrieval-validation-tasks.tasks.prompt.md  004-retrieval-validation-implementation.green.prompt.md
backend/history/prompts/003-rag-agent/: 001-rag-agent-specification.spec.prompt.md  002-rag-agent-planning.plan.prompt.md  003-rag-agent-implementation.green.prompt.md
backend/history/prompts/004-fastapi-rag-integration/: 005-fastapi-rag-integration-spec.spec.prompt.md  006-fastapi-rag-integration-plan.plan.prompt.md  007-fastapi-rag-integration-tasks.tasks.prompt.md  (+1 more)
backend/specs/001-doc-rag-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
backend/specs/002-rag-retrieval-validation/: data-model.md  plan.md  quickstart.md  tasks.md
backend/specs/003-rag-agent/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
backend/specs/004-fastapi-rag-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
backend/tests/: test_api.py
src/components/Chatbot/: index.js
(+6 files in other folders)
